# Wallet-Invariant

./: .gitignore  LICENSE  README.md  README_CN.md  ROADMAP.md  config.example.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: sample_dataset.json
src/: __init__.py  classifier.py  cli.py  config.py  constants.py  delta_extractor.py  evaluation.py  gate.py  invariants.py  simulator.py  types.py
tests/: __init__.py  conftest.py  test_classifier.py  test_integration.py  test_invariants.py  test_types.py
tests/fixtures/: rpc_responses.py
